[package]
name = "bkp-cr3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
bloom = "0.3.2"
chrono = "0.4.20"
clap = {version="3.2.16", features=["derive"]}
glob = "0.3.0"
xshell = "0.2.2"
